# huaweicloud-sdk-c-obs

./: .gitignore  CMakeLists.txt  CMakeLists_ndk_Static.txt  Notice.MD  Open Source Software Notice.md  README.md  Readme.txt  compile_for_macos.txt
CI/: BinaryReport.xlsx  setup.sh
CI/config/: SourceMonitor_prj_clang.xml  SourceMonitor_prj_cpp.xml  app_define.json  config.txt  metric_prj_clang.xml
CI/rule/flexelint/: cloudbu-checks.lnt  options.lnt  zerowarning.lnt
CI/rule/pclint/pclint_lntfiles/: co-gnu.lnt  custom.lnt  env-xml.lnt  include.lnt  options.lnt  std.lnt
platform/eSDK_LogAPI_V2.1.10/C/: readme.txt
platform/eSDK_LogAPI_V2.1.10/C/aarch64/: liblog4cpp.so.5  liblog4cpp.so.5.0.6
platform/eSDK_LogAPI_V2.1.10/C/debug/: eSDKClientLogCfg.ini  eSDKLogAPI.lib  spdlog.lib
platform/eSDK_LogAPI_V2.1.10/C/debug_x64/: eSDKLogAPI.lib  spdlog.lib
platform/eSDK_LogAPI_V2.1.10/C/include/: eSDKLogAPI.h  eSDKLogDataType.h
platform/eSDK_LogAPI_V2.1.10/C/linux_64/: liblog4cpp.so.5.0.6
platform/eSDK_LogAPI_V2.1.10/C/ndk/: liblog4cpp.la  liblog4cpp.lai
platform/eSDK_LogAPI_V2.1.10/C/release/: eSDKLogAPI.lib
platform/eSDK_LogAPI_V2.1.10/C/release_x64/: eSDKLogAPI.lib  log4cpp.lib
platform/eSDK_LogAPI_V2.1.10/CSharp/x64/: eSDKClientLogCfg.ini  eSDKLogAPI.lib  readme.txt
platform/eSDK_LogAPI_V2.1.10/CSharp/x86/: eSDKLog4Net.XML
platform/eSDK_LogAPI_V2.1.10/eSDKLogAPI/: ConfigMgr.cpp  ConfigMgr.h  FileMgr.cpp  FileMgr.h  LoggerMgr.cpp  LoggerMgr.h  Makefile  Makefile.Macos  Makefile.ndk-aarch64  Makefile_LogAPI_ndk_static  Makefile_bak_before  Makefile_static  ReadMe.txt  dllmain.cpp  eSDKClientLog.sln  eSDKClientLog.vcxproj  eSDKClientLog.vcxproj.filters  eSDKIOSLog.h  eSDKLog.cpp  eSDKLog.h  eSDKLogAPI.cpp  eSDKLogAPI.h  eSDKLogDataType.h  eSDKTool.cpp  eSDKTool.h  targetver.h
platform/eSDK_LogAPI_V2.1.10/eSDKLogAPI/eSDKIOSLog/: Logger.cpp  Logger.h  LoggerAdapter.h  LoggerAdapter.m  eSDKIOSLog.h  eSDKIOSLog.m
platform/eSDK_LogAPI_V2.1.10/eSDKLogAPI/eSDKIOSLog.xcodeproj/: project.pbxproj
platform/eSDK_LogAPI_V2.1.10/log4cpp/: AbortAppender.cpp  Appender.cpp  AppenderSkeleton.cpp  AppendersFactory.cpp  BasicConfigurator.cpp  BasicLayout.cpp  BufferingAppender.cpp  Category.cpp  CategoryStream.cpp  ChangeLog  Configurator.cpp  DummyThreads.cpp  FactoryParams.cpp  FileAppender.cpp  Filter.cpp  FixedContextCategory.cpp  HierarchyMaintainer.cpp  LayoutAppender.cpp  LayoutsFactory.cpp  LevelEvaluator.cpp  Localtime.cpp  LoggingEvent.cpp  MSThreads.cpp  Makefile.am  Manipulator.cpp  NDC.cpp  OmniThreads.cpp  OstreamAppender.cpp  PThreads.cpp  PassThroughLayout.cpp  PatternLayout.cpp  PortabilityImpl.hh  Priority.cpp  PropertyConfigurator.cpp  PropertyConfiguratorImpl.cpp  PropertyConfiguratorImpl.hh  RemoteSyslogAppender.cpp  RollingFileAppender.cpp  SimpleConfigurator.cpp  SimpleLayout.cpp  (+12 more)
platform/eSDK_LogAPI_V2.1.10/log4cpp/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
platform/eSDK_LogAPI_V2.1.10/vos/: vos.h  vos_basetype.h  vos_common.h  vos_cond.cpp  vos_cond.h  vos_config.h  vos_errno.h  vos_mem.cpp  vos_mem.h  vos_mutex.cpp  vos_mutex.h  vos_sema.cpp  vos_sema.h  vos_thread.cpp  vos_thread.h  vos_time.cpp  vos_time.h
platform/huaweisecurec/include/: securec.h  securectype.h
platform/huaweisecurec/src/: Makefile  Makefile.Linux64  Makefile.Macos  Makefile.aarch64  Makefile.ndk-aarch64  MakefileCustom  fscanf_s.c  fwscanf_s.c  gets_s.c  input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  scanf_s.c  secinput.h  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  (+10 more)
release/: huaweicloud-obs-sdk-c-arm_3.19.7.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.19.9.2.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.19.9.3.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.19.9.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.21.8.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.22.3.1.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.22.3.2.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.22.3.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.22.5.1.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.22.5.tar.gz.sha256  huaweicloud-obs-sdk-c-arm_3.23.1.tgz.sha256  huaweicloud-obs-sdk-c-arm_3.23.3.2.tgz.sha256  huaweicloud-obs-sdk-c-arm_3.23.3.tgz.sha256  huaweicloud-obs-sdk-c-linux3.22.5.tgz.sha256  huaweicloud-obs-sdk-c-linux_3.19.7.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.19.9.2.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.19.9.3.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.19.9.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.21.8.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.22.3.1.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.22.3.2.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.22.3.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.22.5.1.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.22.5.tar.gz.sha256  huaweicloud-obs-sdk-c-linux_3.23.1.tgz.sha256  huaweicloud-obs-sdk-c-linux_3.23.3.2.tgz.sha256  huaweicloud-obs-sdk-c-linux_3.23.3.tgz.sha256  huaweicloud-obs-sdk-c-macos_3.19.9.3.tar.gz.sha256  huaweicloud-obs-sdk-c-ndk_3.19.9.2.tar.gz.sha256  huaweicloud-obs-sdk-c-ndk_3.23.2.tgz.sha256
source/eSDK_OBS_API/eSDK_OBS_API_C++/: .gitignore  GNUmakefile  GNUmakefile.mingw  GNUmakefile.osx  Makefile-huaweisecurec-ndk-static  Makefile_demo_static_ndk  Makefile_obs  Makefile_obs.Macos  Makefile_static  OBS.ini  README  build.sh  build_aarch.sh  build_aarch64.sh  build_macos.sh  build_ndk_aarch64.sh  build_ndk_static.sh  readme.txt  sdk_c_new44.IAB  sdk_c_new44.IAD  sdk_c_new44.IMB  sdk_c_new44.IMD  sdk_c_new44.PFI  sdk_c_new44.PO  sdk_c_new44.PR  sdk_c_new44.PRI  sdk_c_new44.PS
source/eSDK_OBS_API/eSDK_OBS_API_C++_Demo/: README.txt  build_demo.bat  client.crt  copy.bat  demo.c  demo_common.c  demo_common.h  demo_windows.cpp  object_test.c  server.jks  set.bat
(+756 files in other folders)
